log
Wed 23 Aug 2023 06:38:34 PM UTC: 
 tests:  0|6
total_score: 0/70
1a4cf1b
Wed 23 Aug 2023 06:58:49 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
35c069a
Wed 23 Aug 2023 06:59:54 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
660ba75
Wed 23 Aug 2023 07:01:32 PM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
5a0eecf
Wed 23 Aug 2023 07:08:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: unknown type name ‘Lista’; did you mean ‘List’?
   33 |   Lista *nueva_lista = (List *)malloc(sizeof(List));
      |   ^~~~~
      |   List
list.c:33:24: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   33 |   Lista *nueva_lista = (List *)malloc(sizeof(List));
      |                        ^
list.c:38:14: error: request for member ‘head’ in something not a structure or union
   38 |   nueva_lista->head = NULL;
      |              ^~
list.c:39:14: error: request for member ‘tail’ in something not a structure or union
   39 |   nueva_lista->tail = NULL;
      |              ^~
list.c:40:14: error: request for member ‘current’ in something not a structure or union
   40 |   nueva_lista->current = NULL;
      |              ^~
list.c:41:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   41 |   return nueva_lista;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c3d3e43
Wed 23 Aug 2023 07:08:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
345b4aa
Wed 23 Aug 2023 07:09:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
02f2076
Wed 23 Aug 2023 07:13:29 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
ab36d24
Wed 23 Aug 2023 07:13:58 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
82ebefe
Wed 23 Aug 2023 07:21:30 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
43d8c31
Wed 23 Aug 2023 07:21:54 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f8c99ee
Wed 23 Aug 2023 07:22:40 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
5581e8e
